# parallelism

./: .gitignore
02-19/: hello  hello.c
04-16/: main.py
1/: 1.cpp  cmakelists.txt  readme.md  run
1-new/: cmakelists.txt
1-old/: 1.cpp  cmakelists.txt
2/: 1.c  1.cpp  hello.cpp  makefile  results.csv  task.txt  task_1.cpp
2/lab2/: lab2  lab2.cpp  makefile  plot_effectiveness.py  plot_table.py  results_jacobi.csv
2/mk/: dgemv.c  integral.c
2/task1/: makefile  plot_table.py  task_1.cpp
2/task2/: main.cpp  makefile  plot_table.py  results.csv
3/lab3/: CMakeLists.txt  main.cpp  results_pow.txt  results_sin.txt  results_sqrt.txt  run.sh  server.hpp  test.cpp
4/: main.py  task.txt
5/: benchmark.py  main.py  task.txt
6/: .gitignore  CMakeLists.txt  main.cpp  profile_n512_nvtx.csv  profile_stages.sh  report.py  report_stages.py  result_128.txt  result_256.txt  result_512.txt  run.sh  task.txt
6/benchmark_results/: summary.csv
6/benchmark_results/run_gpu_512/: result_512.txt
6/benchmark_results/run_host_512/: result_512.txt
6/benchmark_results/run_host_n256_c1/: result_256.txt
6/benchmark_results/run_multicore_128/: result_128.txt
6/stage_profiles/: g21_n1024.csv  g21_n1024.nsys-rep  g21_n1024.sqlite  g21_n128.csv  g21_n128.nsys-rep  g21_n128.sqlite  g21_n2048.csv  g21_n2048.nsys-rep  g21_n2048.sqlite  g21_n256.csv  g21_n256.nsys-rep  g21_n256.sqlite  g21_n4096.csv  g21_n4096.nsys-rep  g21_n4096.sqlite  g21_n512.csv  g21_n512.nsys-rep  g21_n512.sqlite  g22_c1.csv  g22_c1.nsys-rep  g22_c1.sqlite  g22_c10.csv  g22_c10.nsys-rep  g22_c10.sqlite  g22_c100.csv  g22_c100.nsys-rep  g22_c100.sqlite  g22_c1000.csv  g22_c1000.nsys-rep  g22_c1000.sqlite  g22_c2.csv  g22_c2.nsys-rep  g22_c2.sqlite  g22_c5.csv  g22_c5.nsys-rep  g22_c5.sqlite  g22_c50.csv  g22_c50.nsys-rep  g22_c50.sqlite
bubble/: main  main.cpp  test.py
